036/kubernetes/kubia-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-server
  #May match selectors of replication controllers and services
  labels:
    tenc-service: kubia-server
    version: v1
spec:
  replicas: 3
  #Label selector for pods. Existing ReplicaSets whose pods are selected by this will be the ones affected by this deployment. It must match the pod template's labels.
  selector:
    matchLabels:
      tenc-service: kubia-server
      version: v1
  template:
    metadata:
      #May match selectors of replication controllers and services.
      labels:
        tenc-service: kubia-server
        version: v1
    spec:
      containers:
      - image: mirrors.tencent.com/ieg-data-public-test/kubia-v1:latest
        name: kubia-server
