036/kubernetes/kubia-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service
  #May match selectors of replication controllers and services
  labels:
    tenc-service: kubia-server
spec:
  #clusterIP: None
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  #Route service traffic to pods with label keys and values matching this selector.
  #Only applies to types ClusterIP, NodePort, and LoadBalancer. Ignored if type is ExternalName.
  selector:
    tenc-service: kubia-server
