036/kubernetes/kubia-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubia-vs
spec:
  hosts:
  - "127.0.0.1"
  gateways:
  - kubia-service-gateway
  http:
  - route:
    - destination:
        host: kubia-service.default.svc.cluster.local      # 指定 K8S 中的 svc 资源名字
        subset: dr-v1
        port:
          number: 8080
      weight: 30
    - destination:
        host: kubia-service.default.svc.cluster.local      # 指定 K8S 中的 svc 资源名字
        subset: dr-v2
        port:
          number: 8080
      weight: 70
